progress Nov11 before techtalk

--- a/companionWebsite/index.html
+++ b/companionWebsite/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="icon" href="https://upload.wikimedia.org/wikipedia/commons/0/05/Apache_kafka.svg">
+  <link rel="icon" type="image/png" href="client/icons/kafkaQ-logo-no-letters.png">
   <link rel="stylesheet" href="./client/styles/styles.scss">
   <title>kafkaQ</title>
 </head>
