--- a/companionWebsite/index.html
+++ b/companionWebsite/index.html
@@ -3,8 +3,9 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="icon" type="image/png" href="client/icons/kafkaQ-logo-no-letters.png">
   <link rel="stylesheet" href="./client/styles/styles.scss">
+  <!-- <link rel="icon" href="https://ca.slack-edge.com/T7X3836NN-U013XDUGGPR-b6adcef8b79b-512"/> -->
+  <link rel="icon" href="https://drive.google.com/file/d/1xSXlo05ZIeuvpErzZXCi-BiX2nBVjKr3/view?usp=sharing"/>
   <title>kafkaQ</title>
 </head>
 <body>
